# ibkr-bull-call

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  STRATEGY.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: STRATEGY-ROADMAP.md  STRATEGY-SPEC-v1.md  STRATEGY-SPEC-v2.md  STRATEGY-SPEC-v3.md  STRATEGY-SPEC-v4.md  STRATEGY-aws-deploy.md  STRATEGY-v9-paper-trading.md  data-acquisition-decision.md  data-inventory.md  live-capital-execution-tracker.md  live-capital-go-no-go.md  minimum-viable-backtesting-program.md  strategy-review.md
infra/cloudformation/: compute.yaml  data-research.yaml  data.yaml  network.yaml
infra/scripts/: deploy.sh  release.sh  seed-secrets.sh
infra/systemd/: bull-call-bot.service  ibeam.service
research/data/: manifest.json
research/reports/: directional-edge-sweep-train-v2events.csv  directional-edge-sweep-train-v2events.md  directional-edge-sweep-train-v3.csv  directional-edge-sweep-train-v3.md  directional-edge-sweep-train.csv  directional-edge-sweep-train.md  directional-edge-v1-ledger.csv  directional-edge-v1.md  directional-edge-v2-validation-ledger.csv  directional-edge-v2-validation.md  directional-edge-v3-validation-ledger.csv  directional-edge-v3-validation.md  directional-edge-v4-validation-ledger.csv  directional-edge-v4-validation.md  spy-dca-baseline-60mo-ledger.csv  spy-dca-baseline-60mo.md  spy-dca-baseline-v9window-ledger.csv  spy-dca-baseline-v9window.md  v1-rerun-60mo-ledger.csv  v1-rerun-60mo.md  v1-v4-rerun-60mo-summary.md  v2-60mo-holdout-ledger.csv  v2-60mo-holdout.md  v2-60mo-revalidate-summary.md  v2-60mo-train-ledger.csv  v2-60mo-train.md  v2-60mo-val-ledger.csv  v2-60mo-val.md  v2-rerun-60mo-ledger.csv  v2-rerun-60mo.md  v2-risk-adjusted-metrics.md  v3-rerun-60mo-ledger.csv  v3-rerun-60mo.md  v4-A-gap-fade-train.csv  v4-A-gap-fade-train.md  v4-B-afternoon-train.csv  v4-B-afternoon-train.md  v4-C-bond-gate-train.md  (+41 more)
tests/: conftest.py  test_attempt_until_filled.py  test_calendar.py  test_cfn_templates.py  test_config.py  test_cpapi_chain.py  test_cpapi_client.py  test_cpapi_execution.py  test_cpapi_spot.py  test_events.py  test_ibeam_ssm_provider.py  test_infra_scripts.py  test_main.py  test_pricing.py  test_reconcile.py  test_scheduler.py  test_simulate.py  test_ssm.py  test_state.py  test_stop.py  test_strategy.py  test_strikes.py  test_trade_idempotency.py
(+82 files in other folders)
