[project]
name = "bull-call"
version = "0.1.0"
description = "Autonomous SPX 0DTE bull call spread bot for Interactive Brokers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ibind>=0.1.20",
    "pandas-market-calendars>=4.4",
    "scipy>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "freezegun>=1.5",
    "mypy>=1.10",
    "types-pytz",
    "boto3>=1.34",
    "botocore>=1.34",
    "moto[dynamodb]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bull_call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bull_call"]
