[project]
name = "bull-call"
version = "0.1.0"
description = "Autonomous SPX 0DTE bull call spread bot for Interactive Brokers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ibind>=0.1.20",
    "pandas-market-calendars>=4.4",
    "scipy>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.43.0",
]
dev = [
    "pytest>=8.0",
    "freezegun>=1.5",
    "mypy>=1.10",
    "types-pytz",
    "pandas-stubs>=2.0",  # quiet missing-stub warnings on calendar.py imports
    "scipy-stubs>=1.13",  # quiet missing-stub warnings on pricing.py imports
    "pyarrow>=16",        # research-grade Parquet I/O (research/scripts/...)
    "databento>=0.77.0",  # Databento client for research/scripts/download_databento.py
    "yfinance>=1.3.0",    # free daily VIX for v3 regime gate (research/scripts/download_vix.py)
    "boto3>=1.43.0",
    "botocore>=1.34",
    "moto[dynamodb]>=5.2.0",
    "pyyaml>=6.0",  # CFN-template parsing in tests/test_cfn_templates.py
    "pytest-cov>=7.0",  # coverage gate enforced in .github/workflows/ci.yml
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bull_call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bull_call"]
